correction report sofa

--- a/Informes por Partes/SOFA/sofa_memoria_v2.tex
+++ b/Informes por Partes/SOFA/sofa_memoria_v2.tex
@@ -32,10 +32,9 @@
   urlcolor=blue
 }
 
-\title{Adaptación del modelo de córnea de ANSYS a SOFA\\
-Versión 1: Construcción de la escena y modelado}
-\author{Parte del trabajo grupal: Simulación SOFA}
-\date{\today}
+\title{Adaptación del modelo de córnea de ANSYS a SOFA}
+\author{Pablo Sola, Emilio Küstner, Elena Pulido}
+\date{}
 
 \begin{document}
 \maketitle
