--- a/Informes por Partes/Ansys/InformeANSYS.tex
+++ b/Informes por Partes/Ansys/InformeANSYS.tex
@@ -388,7 +388,7 @@ Elemento tetraédrico de 10 nodos (cuadrático) para los volúmenes estromales~\
 Elemento de lámina de 4 nodos para la capa de Bowman~\cite{ANSYS_SHELL181}. Características:
 \begin{itemize}[leftmargin=1.2cm]
   \item 6 grados de libertad por nodo (3 traslaciones + 3 rotaciones)
-  \item Adecuado para estructuras delgadas (espesor $<<$ dimensiones en planta)
+  \item Adecuado para estructuras delgadas (espesor $<$$<$ dimensiones en planta)
   \item Integración mediante puntos de Gauss a través del espesor
 \end{itemize}
 
