--- a/Informes por Partes/Ansys/InformeANSYS.tex
+++ b/Informes por Partes/Ansys/InformeANSYS.tex
@@ -33,7 +33,7 @@
 \title{\textbf{Simulación Biomecánica de la Córnea Humana mediante Elementos Finitos}\\
 \large Modelado y Análisis en ANSYS Workbench para Simulador de Palpación Corneal}
 \author{Pablo Barceló, Paco Bustos, Javier Rivero}
-\date{\today}
+\date{}
 
 \begin{document}
 \maketitle
